--- a/mysecondwebapp/src/main/resources/application.properties
+++ b/mysecondwebapp/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.datasource.password=Thaivid01@
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
