--- a/mysecondwebapp/src/main/resources/application.properties
+++ b/mysecondwebapp/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.datasource.password=Thaivid01@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.mvc.format.date=yyyy-MM-dd
